[package]
name = "wkb"
version = "0.2.0"
authors = ["Rory McCann <rory@technomancy.org>"]
description = "Convert rust-geo types to/from Well Known Binary"
keywords = ["geo"]
repository = "https://github.com/rory/rust-wkb"
license = "AGPL-3.0+"

[dependencies]
geo = "0.7.1"
byteorder = "1"
num-traits = "0.1"
