[package]
name = "wkb"
version = "0.7.0"
authors = ["Rory McCann <rory@technomancy.org>"]
description = "Convert geo-types from georust to/from Well Known Binary"
keywords = ["geo"]
repository = "https://github.com/rory/rust-wkb"
license = "AGPL-3.0+"

[dependencies]
geo-types = "0.7"
num-traits = "0.2"
